<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dimen_15">

    <TextView
        android:id="@+id/nameLabelTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_15"
        android:text="@string/label_checkout_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/checkoutNameEt"
        style="@style/ShopFormField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameLabelTv" />

    <TextView
        android:id="@+id/emailLabelTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_15"
        android:text="@string/label_checkout_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkoutNameEt" />

    <EditText
        android:id="@+id/checkoutEmailEt"
        style="@style/ShopFormFieldEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLabelTv"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/termsSw"
        android:layout_width="0dp"
        style="@style/ShopSwitch"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkoutEmailEt"/>

    <TextView
        android:id="@+id/labelToCTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_agree_terms"
        app:layout_constraintBottom_toBottomOf="@id/termsSw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/termsSw"
        app:layout_constraintTop_toTopOf="@id/termsSw" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/payBtn"
        style="@style/ShopPayButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/termsSw"
        android:text="Pay $350"/>

</androidx.constraintlayout.widget.ConstraintLayout>